--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>Todo List</title>
     <link rel="stylesheet" href="style.css">
-  
+    <!-- The line above links an external CSS file called "style.css" -->
+
 </head>
 
 <body>
@@ -23,6 +24,7 @@
     </div>
 
     <script src="script.js"></script>
+    <!-- The line above links an external JavaScript file called "script.js" -->
 </body>
 
-</html>
+</html> 
